k8s/appservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic
  namespace: mavoyan-namespace
spec:
  selector:
    app: petclinic
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
