k8s/dbservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-db
  namespace: mavoyan-namespace
spec:
  ports:
      - port: 5432
  selector:
    app: demo-db
